# solver

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  models.py  pyproject.toml  requirements.txt  serialization.py  server.py  solver.py  vm-placement-solver-design-guide.docx
app/: diagnostics.py  models.py  purchase_planner.py  server.py  solver.py  split_solver.py  splitter.py
deploy/: k8s-deployment.yaml
docs/: constraints.md  cross-scheduling-constraints-design.md  enhancement-proposal-template.md  explainability.md  go-scheduler-guide.md  objective-function-guide.md  objective-function.md  reading-guide-splitter.md  requirement-splitter-v2.md  requirement-splitter.md  requirement-splitting-design.md  why-cp-sat-replaces-round-robin.md  why-cp-sat.md
examples/: 01_minimal.json  02_anti_affinity.json  03_partial_placement.json  04_cross_cluster_anti_affinity.json  05_full_cluster.json  06_split_basic.json  07_split_multi_spec.json  08_split_multi_role.json  09_split_mixed_mode.json  error_duplicate_bm.json  error_infeasible.json  max_per_bm_auto_gen.json  max_per_bm_selector.json  max_per_bm_vm_ids.json  purchase_planning_basic.json  purchase_planning_mixed.json  purchase_planning_real.json  purchase_planning_role_based.json  sample_2vm_9bm.json  sample_request.json  split_5req_3spec_50bm.json  split_basic.json  split_candidate_baremetals.json  split_config_specs.json  split_max_per_bm.json  split_multi_role.json  split_same_type_diff_spec.json  success_basic.json
exercises/: README.md  conftest.py
tests/: conftest.py  test_diagnostics.py  (+3 more)
(+34 files in other folders)
