[project]
name = "vm-placement-solver"
version = "0.1.0"
description = "Python-based VM placement optimizer using OR-Tools CP-SAT solver"
requires-python = ">=3.13"
dependencies = [
    "ortools>=9.9",
    "pydantic>=2.0",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "swagger-ui-bundle>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.24",
]

[project.scripts]
solver-server = "app.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
# pytest 固定從 tests/ 找測試，不需要在 terminal 指定路徑
testpaths = ["tests"]
